{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 40,
  "lineage": "24b50700-900b-6f39-ba82-1bfd51f8cfa7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "fortimanager-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f58181c23183baa",
            "association_id": "eipassoc-08cdc150c3ed6dda7",
            "domain": "vpc",
            "id": "eipalloc-00f58181c23183baa",
            "instance": "i-075eb9e8851eafeaa",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-08e942bc13d8d3af3",
            "private_dns": "ip-10-10-0-122.ap-south-1.compute.internal",
            "private_ip": "10.10.0.122",
            "public_dns": "ec2-13-232-27-10.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.27.10",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.fortimanager-vm",
            "aws_network_interface.fortimanager-eth0",
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fmgvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fortimanager-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f4e889fd933a47b5",
            "arn": "arn:aws:ec2:ap-south-1:822066771166:instance/i-075eb9e8851eafeaa",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_options": [
              {
                "core_count": 4,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-01df3ec9c649b02b3",
                "volume_size": 100,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-075eb9e8851eafeaa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.2xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-08e942bc13d8d3af3"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08e942bc13d8d3af3",
            "private_dns": "ip-10-10-0-122.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0640f1f1f3239ce46",
                "volume_size": 10,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01fbc49060f900375",
            "tags": {
              "Name": "FortiManagerVM"
            },
            "tags_all": {
              "Name": "FortiManagerVM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09063a64a49c5ea6a",
              "sg-0a3717f475eb7dd2c"
            ]
          },
          "dependencies": [
            "aws_network_interface.fortimanager-eth0",
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fmgvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fortimanager-internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:internet-gateway/igw-054861ae14e2d8781",
            "id": "igw-054861ae14e2d8781",
            "owner_id": "822066771166",
            "tags": {
              "Name": "fortimanager-igw"
            },
            "tags_all": {
              "Name": "fortimanager-igw"
            },
            "vpc_id": "vpc-0b118c85538b30401"
          },
          "dependencies": [
            "aws_vpc.fmgvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "fortimanager-eth0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:network-interface/eni-08e942bc13d8d3af3",
            "description": "Fortimanager - Port 1",
            "id": "eni-08e942bc13d8d3af3",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:1c:f0:da:7f:a6",
            "owner_id": "822066771166",
            "private_dns_name": "ip-10-10-0-122.ap-south-1.compute.internal",
            "private_ip": "10.10.0.122",
            "private_ip_list": [
              "10.10.0.122"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.10.0.122"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a3717f475eb7dd2c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01fbc49060f900375"
          },
          "dependencies": [
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fmgvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "fmcpublic-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-054861ae14e2d8781",
            "id": "r-rtb-07023baa86b6be9171080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07023baa86b6be917",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fortimanager-internet-gw",
            "aws_route_table.fmgpublicrt",
            "aws_vpc.fmgvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fmgpublicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:route-table/rtb-07023baa86b6be917",
            "id": "rtb-07023baa86b6be917",
            "owner_id": "822066771166",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fortimanager-public-rt"
            },
            "tags_all": {
              "Name": "fortimanager-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b118c85538b30401"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fmgvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fortimanager-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052169eb3fa758672",
            "route_table_id": "rtb-07023baa86b6be917",
            "subnet_id": "subnet-01fbc49060f900375"
          },
          "dependencies": [
            "aws_route_table.fmgpublicrt",
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fmgvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Fortimanager-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:security-group/sg-09063a64a49c5ea6a",
            "description": "Security Group for Fortimanager",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09063a64a49c5ea6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 514,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 514
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 541,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 541
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9443
              }
            ],
            "name": "Fortimanager-Public-allow",
            "name_prefix": "",
            "owner_id": "822066771166",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": " Fortinet Public Allow"
            },
            "tags_all": {
              "Name": " Fortinet Public Allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b118c85538b30401"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fmgvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnetaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:subnet/subnet-01fbc49060f900375",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fbc49060f900375",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "822066771166",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az1"
            },
            "tags_all": {
              "Name": "public subnet az1"
            },
            "vpc_id": "vpc-0b118c85538b30401"
          },
          "dependencies": [
            "aws_vpc.fmgvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fmgvm-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822066771166:vpc/vpc-0b118c85538b30401",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08cff10e55c20fd0c",
            "default_route_table_id": "rtb-085b8798cd75949c4",
            "default_security_group_id": "sg-0a3717f475eb7dd2c",
            "dhcp_options_id": "dopt-0ab7d71ba3704dc83",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b118c85538b30401",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085b8798cd75949c4",
            "owner_id": "822066771166",
            "tags": {
              "Name": "fortimanager"
            },
            "tags_all": {
              "Name": "fortimanager"
            }
          }
        }
      ]
    }
  ]
}